apps/external/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: default
spec:
  type: ExternalName
  externalName: 10.47.59.12
  ports:
    - name: http
      port: 8096
      targetPort: 8096
